refactor: extract the navigator hotbar item into NavigatorItems
Move the navigator-item methods (create/is/has/slots/replace) and their
NamespacedKey out of the catch-all MenuItems into a dedicated NavigatorItems
helper, paralleling MenuItems. MenuItems is left as pure menu-visual helpers
(glass, icon rendering, toggles) and drops its now-unused ConfigService.
NavigatorService, the navigator/inventory listeners and ItemSubCommand inject
NavigatorItems; Services constructs it.